--- a/.github/workflows/build_standalone.yml
+++ b/.github/workflows/build_standalone.yml
@@ -51,8 +51,8 @@ jobs:
           release: ${{matrix.version}}
           products: MATLAB_Compiler
 
-      - name: Extract MATLAB Version for Linux/Mac
-        if: runner.os != 'Windows'
+      - name: Extract MATLAB Version for Linux/Mac (Intel)
+        if: runner.os == 'Linux' || matrix.os_name == 'macOS_Intel'
         run: |
           # Get MATLAB installation path (e.g., /opt/hostedtoolcache/MATLAB/2024.2.999/x64/bin/matlab)
           matlab_path=$(which matlab)
@@ -60,8 +60,34 @@ jobs:
           echo "Matlab path: $matlab_path"
           # Go up two levels to get the folder containing the version (e.g., /opt/hostedtoolcache/MATLAB/2024.2.999)
           matlab_install_dir=$(dirname "$(dirname "$(dirname "$matlab_path")")")
+          echo "matlab_install_dir: $matlab_install_dir"
           # Extract the base directory name (e.g., "2024.2.999") and use the first part as the version (R2024b)
           matlab_base_version=$(basename "$matlab_install_dir" | cut -d. -f1,2)
+          echo "matlab_base_version: $matlab_base_version"
+          # Split the major and minor versions
+          IFS='.' read -r major minor <<< "$matlab_base_version"
+          if [[ "$minor" == "1" ]]; then
+              matlab_version="R${major}a"
+          elif [[ "$minor" == "2" ]]; then
+              matlab_version="R${major}b"
+          fi
+
+          echo "Extracted MATLAB Version: $matlab_version"
+          echo "MATLAB_VERSION=$matlab_version" >> $GITHUB_ENV
+
+      - name: Extract MATLAB Version for Mac (Apple Silicon)
+        if: matrix.os_name == 'macOS_Apple_Silicon'
+        run: |
+          # Get MATLAB installation path (e.g., /opt/hostedtoolcache/MATLAB/2024.2.999/x64/bin/matlab)
+          matlab_path=$(which matlab)
+          # display matlab_path
+          echo "Matlab path: $matlab_path"
+          # Go up two levels to get the folder containing the version (e.g., /opt/hostedtoolcache/MATLAB/2024.2.999)
+          matlab_install_dir=$(dirname "$(dirname "$(dirname "$(dirname "$matlab_path")")")")
+          echo "matlab_install_dir: $matlab_install_dir"
+          # Extract the base directory name (e.g., "2024.2.999") and use the first part as the version (R2024b)
+          matlab_base_version=$(basename "$matlab_install_dir" | cut -d. -f1,2)
+          echo "matlab_base_version: $matlab_base_version"
           # Split the major and minor versions
           IFS='.' read -r major minor <<< "$matlab_base_version"
           if [[ "$minor" == "1" ]]; then
