--- a/.github/workflows/build_standalone.yml
+++ b/.github/workflows/build_standalone.yml
@@ -131,8 +131,9 @@ jobs:
           search-text: <version>
           replacement-text: ${{ github.ref_name }}
       - name: Get the date
-        run: |
-          echo "date=$(date + '%d-%b-%Y')" >> $GITHUB_ENV
+        uses: ajilraju/actions-date@v0.1
+        with:
+          args: date + '%d-%b-%Y'
       - name: Set the date of compilation
         uses: richardrigutins/replace-in-files@v2
         with:
