--- a/.github/workflows/build_standalone.yml
+++ b/.github/workflows/build_standalone.yml
@@ -154,15 +154,13 @@ jobs:
       - name: Compress Unix
         if: ${{ runner.os != 'Windows' }}
         run: |
-          cd ..
-          mv standalone spm12
+          mv ../standalone spm12
           zip -r spm_standalone_${{ github.ref_name }}_${{ matrix.os_name }}_${{ env.MATLAB_VERSION }}.zip spm12
 
       - name: Compress Windows
         if: ${{ runner.os == 'Windows' }}
         run: |
-          cd ..
-          Rename-Item -Path 'standalone' -NewName 'spm12'
+          Rename-Item -Path '../standalone' -NewName 'spm12'
           Compress-Archive -Path 'spm12' -DestinationPath 'spm_standalone_${{ github.ref_name }}_${{ matrix.os_name }}_${{ env.MATLAB_VERSION }}.zip'
 
       - name: Release
