--- a/.github/workflows/build_standalone.yml
+++ b/.github/workflows/build_standalone.yml
@@ -168,7 +168,19 @@ jobs:
           Rename-Item -Path '../standalone' -NewName 'spm12'
           Compress-Archive -Path 'spm12' -DestinationPath 'spm_standalone_${{ github.ref_name }}_${{ matrix.os_name }}_${{ env.MATLAB_VERSION }}.zip'
 
-      - name: Release
+      - name: Release Standalone
+        uses: softprops/action-gh-release@v2
+        with:
+          files: spm*.zip
+
+      # 1) Delete spm*.zip 2) Zip up SPM
+      - name: Create SPM zip (not standalone)
+        if: runner.os == 'Linux' && matrix.version == 'latest'
+        run: |
+          rm spm*.zip
+          zip -r spm_${{ github.ref_name }}.zip .
+          
+      - name: Release SPM
         uses: softprops/action-gh-release@v2
         with:
           files: spm*.zip
