--- a/.github/workflows/build_standalone.yml
+++ b/.github/workflows/build_standalone.yml
@@ -179,8 +179,10 @@ jobs:
       - name: Create SPM zip (not standalone)
         if: runner.os == 'Linux' && matrix.version == 'latest'
         run: |
+          cd ..
           rm spm*.zip
-          zip -r spm_${{ github.ref_name }}.zip .
+          mv spm_actions spm12
+          zip -r spm_${{ github.ref_name }}.zip spm12
 
       - name: Release SPM
         uses: softprops/action-gh-release@v2
