--- a/.github/workflows/build_standalone.yml
+++ b/.github/workflows/build_standalone.yml
@@ -175,6 +175,9 @@ jobs:
         with:
           files: ../spm*.zip
 
+      - name: Start Tmate session
+        uses: mxschmitt/action-tmate@v3
+
       # 1) Delete spm*.zip 2) Zip up SPM
       - name: Create SPM zip (not standalone)
         if: runner.os == 'Linux' && matrix.version == 'latest'
