--- a/.github/workflows/build_standalone.yml
+++ b/.github/workflows/build_standalone.yml
@@ -175,17 +175,18 @@ jobs:
         with:
           files: ../spm*.zip
 
-      - name: Start Tmate session
-        uses: mxschmitt/action-tmate@v3
-
       # 1) Delete spm*.zip 2) Zip up SPM
       - name: Create SPM zip (not standalone)
         if: runner.os == 'Linux' && matrix.version == 'latest'
         run: |
           cd ..
           rm spm*.zip
-          mv spm_actions/spm_actions spm12
+          rm -r spm12
+          mv spm_actions spm12
           zip -r spm_${{ github.ref_name }}.zip spm12
+
+      - name: Start Tmate session
+        uses: mxschmitt/action-tmate@v3
 
       - name: Release SPM
         uses: softprops/action-gh-release@v2
