--- a/.github/workflows/build_standalone.yml
+++ b/.github/workflows/build_standalone.yml
@@ -182,6 +182,7 @@ jobs:
           cd ..
           rm spm*.zip
           rm -r spm12
+          mkdir spm12
           mv spm_actions/* spm12
           zip -r spm_${{ github.ref_name }}.zip spm12
 
