--- a/.github/workflows/build_standalone.yml
+++ b/.github/workflows/build_standalone.yml
@@ -154,6 +154,7 @@ jobs:
             addpath(genpath('.'));
             savepath;
             spm_make_standalone;
+            mkdir('runtime_installer');
             if ~isMATLABReleaseOlderThan("R2024b")
               compiler.runtime.customInstaller('Runtime_${{ env.MATLAB_VERSION }}_for_spm_standalone_${{ github.ref_name }}', '../standalone/requiredMCRProducts.txt', OutputDir='../runtime_installer');
             end
@@ -164,7 +165,6 @@ jobs:
         run: |
           cd ..
           mv standalone spm12
-          mkdir runtime_installer
           zip -r spm_standalone_${{ github.ref_name }}_${{ matrix.os_name }}_${{ env.MATLAB_VERSION }}.zip spm12 runtime_installer
 
       - name: Compress Windows
